# gitscanner

./: .gitignore  README.md  devenv.nix  main.py  pyproject.toml
gitscanner/: gitscanner.py
src/gitscanner/: __init__.py  gitscanner.py
tests/: __init__.py
